--- a/form.html
+++ b/form.html
@@ -2,107 +2,149 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>도서 등록 - BookMap</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
+      margin: 20px;
+      background: #fafafa;
+      color: #1f2937;
+    }
+    form {
+      max-width: 600px;
+      margin: auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+    }
+    label { display: block; margin: 10px 0 6px; }
+    input, textarea, select {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      margin-bottom: 14px;
+    }
+    button {
+      background: #1a73e8;
+      color: #fff;
+      border: none;
+      padding: 10px 16px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    button:hover { background: #1669c1; }
+
+    /* 로딩 */
+    .loading {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: rgba(255,255,255,0.8);
+      z-index: 9999;
+    }
+    .hidden { display: none; }
+    .spinner {
+      border: 4px solid #eee;
+      border-top: 4px solid #1a73e8;
+      border-radius: 50%;
+      width: 36px; height: 36px;
+      animation: spin 1s linear infinite;
+      margin-right: 10px;
+    }
+    @keyframes spin { 100% { transform: rotate(360deg); } }
+  </style>
 </head>
-<body class="bg-gray-50 text-gray-800">
-  <div class="max-w-2xl mx-auto p-6 bg-white shadow rounded-xl mt-6">
-    <h1 class="text-2xl font-bold mb-4">📚 도서 등록</h1>
+<body>
+  <h1>도서 등록</h1>
+  <form id="book-form">
+    <label>제목</label>
+    <input type="text" name="title" required />
 
-    <form id="bookForm" class="space-y-4">
-      <input type="text" name="title" placeholder="도서명" class="w-full border p-2 rounded" required />
-      <input type="text" name="author" placeholder="저자" class="w-full border p-2 rounded" />
-      <input type="text" name="translator" placeholder="번역자/옮긴이" class="w-full border p-2 rounded" />
-      <input type="text" name="publisher" placeholder="출판사" class="w-full border p-2 rounded" />
+    <label>저자</label>
+    <input type="text" name="author" />
 
-      <!-- 카테고리 (다중 선택 가능) -->
-      <label class="block">카테고리 (쉼표로 구분)</label>
-      <input type="text" name="category" placeholder="예: 철학, 신학, 문학" class="w-full border p-2 rounded" />
+    <label>출판사</label>
+    <input type="text" name="publisher" />
 
-      <!-- 레벨 선택 -->
-      <label class="block">레벨</label>
-      <select name="level" class="w-full border p-2 rounded">
-        <option value="입문">입문</option>
-        <option value="초급">초급</option>
-        <option value="중급">중급</option>
-        <option value="고급">고급</option>
-        <option value="전문">전문</option>
-      </select>
+    <label>카테고리 (심표 구분)</label>
+    <input type="text" name="category" />
 
-      <textarea name="reason" placeholder="추천 이유" class="w-full border p-2 rounded"></textarea>
+    <label>레벨</label>
+    <select name="level">
+      <option>입문</option>
+      <option>중급</option>
+      <option>고급</option>
+    </select>
 
-      <!-- 링크 -->
-      <input type="url" name="link.aladin" placeholder="알라딘 링크" class="w-full border p-2 rounded" />
-      <input type="url" name="link.kyobo" placeholder="교보문고 링크" class="w-full border p-2 rounded" />
-      <input type="url" name="link.yes24" placeholder="YES24 링크" class="w-full border p-2 rounded" />
+    <label>설명</label>
+    <textarea name="description"></textarea>
 
-      <!-- 기타 -->
-      <input type="url" name="cover" placeholder="표지 이미지 URL" class="w-full border p-2 rounded" />
-      <input type="text" name="submitter" placeholder="등록자 이름/닉네임" class="w-full border p-2 rounded" />
-      <input type="email" name="email" placeholder="이메일 주소" class="w-full border p-2 rounded" />
+    <label>알라딘 링크</label>
+    <input type="url" name="aladin" />
 
-      <!-- 버튼 -->
-      <button id="submitBtn" type="submit" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">
-        등록하기
-      </button>
-    </form>
+    <label>YES24 링크</label>
+    <input type="url" name="yes24" />
 
-    <!-- 상태 표시 -->
-    <div id="statusMsg" class="mt-4 text-center text-gray-600"></div>
+    <label>이미지 URL</label>
+    <input type="url" name="image" />
 
-    <!-- 하단 버튼 -->
-    <div class="mt-6 flex justify-between">
-      <a href="index.html" class="text-blue-600 hover:underline">🏠 홈</a>
-      <a href="book.html" class="text-blue-600 hover:underline">📖 도서 리스트</a>
-    </div>
+    <label>추천자 이름</label>
+    <input type="text" name="recommender" />
+
+    <label>이메일</label>
+    <input type="email" name="email" />
+
+    <button type="submit">등록하기</button>
+  </form>
+
+  <!-- 로딩 -->
+  <div id="loading" class="loading hidden">
+    <div class="spinner"></div>
+    <p>등록 중입니다...</p>
   </div>
 
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbygL5W_rVDTMkPIjLiSjDVN5nxRaZgHTIW3vbJgTgOL_Z_IwLF4k97VEd1bQNfxqAs1_A/exec";
 
-    const form = document.getElementById("bookForm");
-    const statusMsg = document.getElementById("statusMsg");
-    const submitBtn = document.getElementById("submitBtn");
+    function showLoading() {
+      document.getElementById('loading').classList.remove('hidden');
+    }
+    function hideLoading() {
+      document.getElementById('loading').classList.add('hidden');
+    }
 
-    form.addEventListener("submit", async (e) => {
+    document.getElementById("book-form").addEventListener("submit", async function(e) {
       e.preventDefault();
-      submitBtn.disabled = true;
-      statusMsg.textContent = "⏳ 등록 중...";
+      showLoading();
 
-      const formData = new FormData(form);
-      const data = { action: "addBook" };
-
-      formData.forEach((value, key) => {
-        if (key.includes(".")) {
-          // link.aladin 같은 필드는 객체로 변환
-          const [parent, child] = key.split(".");
-          if (!data[parent]) data[parent] = {};
-          data[parent][child] = value;
-        } else if (key === "category") {
-          data[key] = value.split(",").map(v => v.trim()).filter(v => v);
-        } else {
-          data[key] = value;
-        }
-      });
+      const formData = new FormData(this);
+      const payload = {};
+      formData.forEach((value, key) => { payload[key] = value; });
 
       try {
         const res = await fetch(API_URL, {
           method: "POST",
-          body: JSON.stringify(data),
+          body: JSON.stringify({ action: "addBook", ...payload }),
+          headers: { "Content-Type": "application/json" }
         });
-        const result = await res.json();
 
-        if (result.result === "success") {
-          statusMsg.textContent = "✅ 도서가 성공적으로 등록되었습니다!";
-          form.reset();
+        const result = await res.json();
+        if (result.status === "success") {
+          alert("도서가 등록되었습니다!");
+          this.reset();
         } else {
-          statusMsg.textContent = "⚠️ 오류: " + result.message;
+          alert("등록 실패: " + result.message);
         }
       } catch (err) {
-        statusMsg.textContent = "❌ 네트워크 오류";
+        alert("네트워크 오류: " + err.message);
       } finally {
-        submitBtn.disabled = false;
+        hideLoading();
       }
     });
   </script>
