--- a/admin.html
+++ b/admin.html
@@ -2,105 +2,165 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>관리자 페이지 - BookMap</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>관리자 - BookMap</title>
+  <style>
+    body {
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
+      margin: 20px;
+      background: #fafafa;
+      color: #1f2937;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: #fff;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      border-radius: 8px;
+      overflow: hidden;
+    }
+    th, td {
+      border-bottom: 1px solid #ddd;
+      padding: 10px;
+      text-align: left;
+    }
+    th { background: #f3f4f6; }
+    button {
+      margin-right: 6px;
+      padding: 6px 10px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .approve { background: #16a34a; color: #fff; }
+    .reject { background: #dc2626; color: #fff; }
+    .delete { background: #6b7280; color: #fff; }
+
+    /* 로딩 */
+    .loading {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: rgba(255,255,255,0.8);
+      z-index: 9999;
+    }
+    .hidden { display: none; }
+    .spinner {
+      border: 4px solid #eee;
+      border-top: 4px solid #1a73e8;
+      border-radius: 50%;
+      width: 36px; height: 36px;
+      animation: spin 1s linear infinite;
+      margin-right: 10px;
+    }
+    @keyframes spin { 100% { transform: rotate(360deg); } }
+  </style>
 </head>
-<body class="bg-gray-100 text-gray-800">
-  <div class="max-w-6xl mx-auto p-6">
-    <h1 class="text-3xl font-bold mb-6">🔑 관리자 페이지</h1>
+<body>
+  <h1>관리자 페이지</h1>
+  <table id="admin-table">
+    <thead>
+      <tr>
+        <th>제목</th>
+        <th>저자</th>
+        <th>출판사</th>
+        <th>상태</th>
+        <th>작업</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
-    <!-- 안내 -->
-    <p class="mb-4 text-gray-600">여기서는 관리자가 도서를 <strong>승인 / 보류 / 편집</strong>할 수 있습니다.</p>
-
-    <!-- 리스트 -->
-    <div id="adminList" class="space-y-4"></div>
-
-    <!-- 하단 버튼 -->
-    <div class="mt-8 flex justify-between">
-      <a href="index.html" class="text-blue-600 hover:underline">🏠 홈</a>
-      <a href="book.html" class="text-blue-600 hover:underline">📚 도서 리스트</a>
-    </div>
+  <!-- 로딩 -->
+  <div id="loading" class="loading hidden">
+    <div class="spinner"></div>
+    <p>불러오는 중...</p>
   </div>
 
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbygL5W_rVDTMkPIjLiSjDVN5nxRaZgHTIW3vbJgTgOL_Z_IwLF4k97VEd1bQNfxqAs1_A/exec";
-    const adminList = document.getElementById("adminList");
 
-    // 도서 불러오기
-    async function fetchBooks() {
+    function showLoading() {
+      document.getElementById('loading').classList.remove('hidden');
+    }
+    function hideLoading() {
+      document.getElementById('loading').classList.add('hidden');
+    }
+
+    async function loadBooks() {
+      showLoading();
       try {
-        const res = await fetch(API_URL);
-        const books = await res.json();
+        const res = await fetch(API_URL + "?action=getBooks");
+        const data = await res.json();
+        const tbody = document.querySelector("#admin-table tbody");
+        tbody.innerHTML = "";
 
-        adminList.innerHTML = "";
-
-        if (!books.length) {
-          adminList.innerHTML = `<p class="text-gray-600">등록된 도서가 없습니다.</p>`;
-          return;
-        }
-
-        books.forEach(book => {
-          const card = document.createElement("div");
-          card.className = "bg-white shadow rounded-lg p-4 flex flex-col md:flex-row justify-between items-start md:items-center";
-
-          card.innerHTML = `
-            <div>
-              <h2 class="text-lg font-semibold">${book.title}</h2>
-              <p class="text-sm text-gray-600">${book.author || ""} ${book.translator ? "/ " + book.translator : ""}</p>
-              <p class="text-xs text-gray-500">${book.publisher || ""}</p>
-              <p class="text-xs text-gray-400 mt-1">상태: <span class="font-semibold">${book.status || "대기"}</span></p>
-            </div>
-            <div class="mt-3 md:mt-0 flex gap-2">
-              <button onclick="updateStatus('${book.title}','승인')" class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700">승인</button>
-              <button onclick="updateStatus('${book.title}','보류')" class="px-3 py-1 bg-yellow-600 text-white rounded hover:bg-yellow-700">보류</button>
-              <button onclick="editBook('${book.title}')" class="px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700">편집</button>
-            </div>
+        data.forEach(book => {
+          const tr = document.createElement("tr");
+          tr.innerHTML = `
+            <td>${book.title}</td>
+            <td>${book.author || ''}</td>
+            <td>${book.publisher || ''}</td>
+            <td>${book.status || '대기'}</td>
+            <td>
+              <button class="approve">승인</button>
+              <button class="reject">반려</button>
+              <button class="delete">삭제</button>
+            </td>
           `;
 
-          adminList.appendChild(card);
+          tr.querySelector(".approve").addEventListener("click", () => updateStatus(book.title, "승인"));
+          tr.querySelector(".reject").addEventListener("click", () => updateStatus(book.title, "반려"));
+          tr.querySelector(".delete").addEventListener("click", () => deleteBook(book.title));
+
+          tbody.appendChild(tr);
         });
-      } catch (err) {
-        adminList.innerHTML = `<p class="text-red-600">❌ 데이터를 불러오는데 실패했습니다.</p>`;
+      } catch (e) {
+        alert("데이터 불러오기 실패");
+      } finally {
+        hideLoading();
       }
     }
 
-    // 상태 변경
-    async function updateStatus(title, newStatus) {
+    async function updateStatus(title, status) {
+      showLoading();
       try {
         const res = await fetch(API_URL, {
           method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ action: "updateStatus", title, status: newStatus })
+          body: JSON.stringify({ action: "updateStatus", title, status }),
+          headers: { "Content-Type": "application/json" }
         });
-        const result = await res.json();
-        alert(result.message || "처리되었습니다.");
-        fetchBooks(); // 새로고침
-      } catch (err) {
-        alert("❌ 상태 변경 실패");
+        await res.json();
+        loadBooks();
+      } catch(e) {
+        alert("상태 업데이트 실패");
+      } finally {
+        hideLoading();
       }
     }
 
-    // 편집 (간단 예시: 제목 기반으로 찾고 reason 수정)
-    async function editBook(title) {
-      const newReason = prompt("새로운 추천 이유를 입력하세요:");
-      if (!newReason) return;
-
+    async function deleteBook(title) {
+      if (!confirm("정말 삭제하시겠습니까?")) return;
+      showLoading();
       try {
         const res = await fetch(API_URL, {
           method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ action: "editBook", title, reason: newReason })
+          body: JSON.stringify({ action: "deleteBook", title }),
+          headers: { "Content-Type": "application/json" }
         });
-        const result = await res.json();
-        alert(result.message || "편집되었습니다.");
-        fetchBooks();
-      } catch (err) {
-        alert("❌ 편집 실패");
+        await res.json();
+        loadBooks();
+      } catch(e) {
+        alert("삭제 실패");
+      } finally {
+        hideLoading();
       }
     }
 
-    fetchBooks();
+    loadBooks();
   </script>
 </body>
 </html>
