--- a/book.html
+++ b/book.html
@@ -3,106 +3,49 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>도서 리스트 - BookMap</title>
+  <title>BookMap — 도서 리스트</title>
   <style>
-    :root {
-      --gap: 16px;
-      --card-w: 260px; /* 기존 360px → 축소 */
-      --text: #1f2937;
-      --muted: #6b7280;
-      --border: #e5e7eb;
-      --link: #1a73e8;
-      --bg: #ffffff;
-    }
-    * { box-sizing: border-box; }
-    body {
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
-      color: var(--text);
-      margin: 20px;
-      background: #fafafa;
-    }
-    h1 { margin: 0 0 14px; font-size: 22px; }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(var(--card-w), 1fr));
-      gap: var(--gap);
-    }
-    .card {
-      background: var(--bg);
-      border: 1px solid var(--border);
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-      transition: transform 0.2s;
-    }
-    .card:hover { transform: translateY(-4px); }
-    .card img {
-      width: 100%;
-      height: 180px;
-      object-fit: contain; /* 전체 축소 이미지 */
-      background: #f9f9f9;
-    }
-    .card-body {
-      padding: 12px 14px;
-    }
-    .card-title {
-      font-size: 16px;
-      font-weight: 600;
-      margin: 0 0 6px;
-    }
-    .card-author {
-      font-size: 14px;
-      color: var(--muted);
-      margin-bottom: 8px;
-    }
-    .card a {
-      text-decoration: none;
-      color: var(--link);
-      font-size: 14px;
-    }
-
-    /* 로딩 */
-    .loading {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: rgba(255,255,255,0.8);
-      z-index: 9999;
-    }
-    .hidden { display: none; }
-    .spinner {
-      border: 4px solid #eee;
-      border-top: 4px solid #1a73e8;
-      border-radius: 50%;
-      width: 36px; height: 36px;
-      animation: spin 1s linear infinite;
-      margin-right: 10px;
-    }
-    @keyframes spin { 100% { transform: rotate(360deg); } }
+    body { font-family: system-ui, sans-serif; margin: 20px; background: #fafafa; color: #333; }
+    h1 { margin-bottom: 14px; }
+    .toolbar { display: flex; flex-wrap: wrap; gap: 6px; margin-bottom: 16px; }
+    button.filter { padding: 6px 12px; border: 1px solid #ddd; border-radius: 20px; background: #fff; cursor: pointer; }
+    button.filter.active { background: #1a73e8; color: #fff; }
+    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 16px; }
+    .book-card { background: #fff; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); padding: 12px; cursor: pointer; transition: transform 0.2s; }
+    .book-card:hover { transform: translateY(-4px); }
+    .book-card img { width: 100%; height: 180px; object-fit: contain; background: #f9f9f9; border-radius: 8px; }
+    .nav { margin: 20px 0; }
+    .nav a { margin-right: 10px; text-decoration: none; color: #1a73e8; }
+    .loading { text-align: center; margin-top: 40px; font-size: 16px; }
   </style>
 </head>
 <body>
   <h1>도서 리스트</h1>
-  <div class="grid" id="book-list"></div>
+  <div class="nav">
+    <a href="index.html">🏠 메인으로</a>
+  </div>
+
+  <!-- 필터 영역 -->
+  <div id="category-filters" class="toolbar"></div>
+  <div id="level-filters" class="toolbar"></div>
+
+  <!-- 도서 리스트 -->
+  <div id="book-list" class="grid"></div>
 
   <!-- 로딩 -->
-  <div id="loading" class="loading hidden">
-    <div class="spinner"></div>
-    <p>로딩 중입니다...</p>
-  </div>
+  <div id="loading" class="loading hidden">로딩 중입니다...</div>
 
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbygL5W_rVDTMkPIjLiSjDVN5nxRaZgHTIW3vbJgTgOL_Z_IwLF4k97VEd1bQNfxqAs1_A/exec";
+    let books = [];
+    let activeCategory = null;
+    let activeLevel = null;
 
     function showLoading() {
-      document.getElementById('loading').classList.remove('hidden');
+      document.getElementById("loading").classList.remove("hidden");
     }
     function hideLoading() {
-      document.getElementById('loading').classList.add('hidden');
+      document.getElementById("loading").classList.add("hidden");
     }
 
     async function loadBooks() {
@@ -110,28 +53,81 @@
       try {
         const res = await fetch(API_URL + "?action=getBooks");
         const data = await res.json();
-
-        const list = document.getElementById('book-list');
-        list.innerHTML = "";
-
-        data.forEach(book => {
-          const div = document.createElement("div");
-          div.className = "card";
-          div.innerHTML = `
-            <img src="${book.image || ''}" alt="${book.title}">
-            <div class="card-body">
-              <div class="card-title">${book.title}</div>
-              <div class="card-author">${book.author || ''}</div>
-              <a href="book-detail.html?title=${encodeURIComponent(book.title)}">상세보기</a>
-            </div>
-          `;
-          list.appendChild(div);
-        });
-      } catch(e) {
-        alert("도서 목록을 불러오는 중 오류가 발생했습니다.");
+        books = data;
+        renderFilters();
+        renderBooks();
+      } catch (e) {
+        console.error("Error loading books", e);
       } finally {
         hideLoading();
       }
+    }
+
+    function renderFilters() {
+      const categories = [...new Set(books.flatMap(b => (b.category ? b.category.split(",") : [])))];
+      const levels = ["입문", "초급", "중급", "고급", "전문"];
+
+      const catContainer = document.getElementById("category-filters");
+      catContainer.innerHTML = `<strong>카테고리:</strong>`;
+      categories.forEach(cat => {
+        const btn = document.createElement("button");
+        btn.className = "filter";
+        btn.innerText = cat.trim();
+        btn.onclick = () => {
+          activeCategory = activeCategory === cat ? null : cat;
+          renderBooks();
+          renderFilters();
+        };
+        if (activeCategory === cat) btn.classList.add("active");
+        catContainer.appendChild(btn);
+      });
+
+      const levelContainer = document.getElementById("level-filters");
+      levelContainer.innerHTML = `<strong>레벨:</strong>`;
+      levels.forEach(lv => {
+        const btn = document.createElement("button");
+        btn.className = "filter";
+        btn.innerText = lv;
+        btn.onclick = () => {
+          activeLevel = activeLevel === lv ? null : lv;
+          renderBooks();
+          renderFilters();
+        };
+        if (activeLevel === lv) btn.classList.add("active");
+        levelContainer.appendChild(btn);
+      });
+    }
+
+    function renderBooks() {
+      const list = document.getElementById("book-list");
+      list.innerHTML = "";
+      let filtered = books;
+      if (activeCategory) {
+        filtered = filtered.filter(b => b.category && b.category.includes(activeCategory));
+      }
+      if (activeLevel) {
+        filtered = filtered.filter(b => b.level && b.level.includes(activeLevel));
+      }
+      if (filtered.length === 0) {
+        list.innerHTML = "<p>해당 조건의 도서가 없습니다.</p>";
+        return;
+      }
+      filtered.forEach(book => {
+        const card = document.createElement("div");
+        card.className = "book-card";
+        card.onclick = () => viewDetail(book.title);
+
+        card.innerHTML = `
+          <img src="${book.cover || ''}" alt="${book.title}">
+          <h3>${book.title}</h3>
+          <p>${book.author || ''} / ${book.publisher || ''}</p>
+        `;
+        list.appendChild(card);
+      });
+    }
+
+    function viewDetail(title) {
+      window.location.href = "detail.html?title=" + encodeURIComponent(title);
     }
 
     loadBooks();
