--- a/book-detail.html
+++ b/book-detail.html
@@ -1,112 +1,104 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>도서 상세 - BookMap</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>도서 상세</title>
   <style>
-    body {
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
-      margin: 20px;
-      background: #fafafa;
-      color: #1f2937;
+    body { font-family: sans-serif; margin: 20px; background: #fafafa; color: #333; }
+    h1 { text-align: center; }
+
+    .card {
+      max-width: 600px; margin: 0 auto;
+      background: white; border-radius: 12px; padding: 20px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-    .container {
-      max-width: 720px;
-      margin: auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+    .card img {
+      width: 100%; max-height: 400px; object-fit: contain; border-radius: 8px;
+      background: #f5f5f5;
     }
-    h1 { margin-top: 0; }
-    img {
-      width: 220px;
-      height: auto;
-      object-fit: contain;
-      display: block;
-      margin-bottom: 20px;
+    .links a {
+      margin: 5px; padding: 8px 14px;
+      background: #1a73e8; color: white; border-radius: 6px;
+      text-decoration: none; display: inline-block;
     }
-    .muted { color: #6b7280; }
+    .links a:hover { background: #1558b0; }
+
+    .nav { margin-top: 20px; text-align: center; }
+    .nav a { margin: 0 10px; text-decoration: none; color: #1a73e8; font-weight: bold; }
 
     /* 로딩 */
-    .loading {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: rgba(255,255,255,0.8);
-      z-index: 9999;
-    }
-    .hidden { display: none; }
+    .loading { text-align: center; margin: 40px auto; color: #555; }
     .spinner {
-      border: 4px solid #eee;
+      width: 40px; height: 40px;
+      border: 4px solid #e5e7eb;
       border-top: 4px solid #1a73e8;
       border-radius: 50%;
-      width: 36px; height: 36px;
       animation: spin 1s linear infinite;
-      margin-right: 10px;
+      margin: 0 auto 10px;
     }
-    @keyframes spin { 100% { transform: rotate(360deg); } }
+    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+    .hidden { display: none; }
   </style>
 </head>
 <body>
-  <div class="container" id="book-detail">
-    <p>상세 정보를 불러오는 중...</p>
-  </div>
+  <h1>📖 도서 상세</h1>
 
   <!-- 로딩 -->
-  <div id="loading" class="loading hidden">
+  <div id="loading" class="loading">
     <div class="spinner"></div>
     <p>로딩 중입니다...</p>
+  </div>
+
+  <div id="detail" class="card hidden"></div>
+
+  <div class="nav">
+    <a href="index.html">🏠 홈</a>
+    <a href="book.html">📚 도서 목록</a>
   </div>
 
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbygL5W_rVDTMkPIjLiSjDVN5nxRaZgHTIW3vbJgTgOL_Z_IwLF4k97VEd1bQNfxqAs1_A/exec";
 
-    function showLoading() {
-      document.getElementById('loading').classList.remove('hidden');
-    }
-    function hideLoading() {
-      document.getElementById('loading').classList.add('hidden');
-    }
+    const params = new URLSearchParams(window.location.search);
+    const title = params.get("title");
 
-    async function loadBookDetail() {
-      showLoading();
-      const params = new URLSearchParams(window.location.search);
-      const title = params.get("title");
-
+    async function fetchDetail() {
       try {
         const res = await fetch(API_URL + "?action=getBooks");
         const data = await res.json();
         const book = data.find(b => b.title === title);
 
-        const container = document.getElementById("book-detail");
-        if (book) {
-          container.innerHTML = `
-            <h1>${book.title}</h1>
-            <img src="${book.image || ''}" alt="${book.title}">
-            <p class="muted">저자: ${book.author || '정보 없음'}</p>
-            <p>출판사: ${book.publisher || '정보 없음'}</p>
-            <p>카테고리: ${book.category || ''}</p>
-            <p>레벨: ${book.level || ''}</p>
-            <p>${book.description || ''}</p>
-            <p><a href="${book.aladin || '#'}" target="_blank">알라딘 링크</a></p>
-            <p><a href="${book.yes24 || '#'}" target="_blank">YES24 링크</a></p>
-          `;
-        } else {
-          container.innerHTML = `<p>해당 도서를 찾을 수 없습니다.</p>`;
+        if (!book) {
+          document.getElementById("loading").innerHTML = "<p>❌ 도서를 찾을 수 없습니다.</p>";
+          return;
         }
-      } catch(e) {
-        alert("도서 정보를 불러오는 중 오류가 발생했습니다.");
-      } finally {
-        hideLoading();
+
+        document.getElementById("detail").innerHTML = `
+          <img src="${book.cover}" alt="${book.title}">
+          <h2>${book.title}</h2>
+          <p><strong>저자:</strong> ${book.author || ""}</p>
+          <p><strong>출판사:</strong> ${book.publisher || ""}</p>
+          <p><strong>번역자:</strong> ${book.translator || ""}</p>
+          <p><strong>추천 이유:</strong> ${book.reason || ""}</p>
+          <p><strong>카테고리:</strong> ${book.category || ""}</p>
+          <p><strong>레벨:</strong> ${book.level || ""}</p>
+
+          <div class="links">
+            ${book.link?.aladin ? `<a href="${book.link.aladin}" target="_blank">알라딘</a>` : ""}
+            ${book.link?.kyobo ? `<a href="${book.link.kyobo}" target="_blank">교보문고</a>` : ""}
+            ${book.link?.yes24 ? `<a href="${book.link.yes24}" target="_blank">YES24</a>` : ""}
+          </div>
+        `;
+
+        document.getElementById("loading").classList.add("hidden");
+        document.getElementById("detail").classList.remove("hidden");
+      } catch (e) {
+        document.getElementById("loading").innerHTML = "<p>❌ 오류가 발생했습니다.</p>";
       }
     }
 
-    loadBookDetail();
+    fetchDetail();
   </script>
 </body>
 </html>
