--- a/book.html
+++ b/book.html
@@ -3,158 +3,140 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>도서 리스트</title>
+  <title>북맵 — 도서 리스트</title>
   <style>
-    body { font-family: sans-serif; margin: 20px; background: #fafafa; color: #333; }
-    h1 { text-align: center; }
+    body { font-family: sans-serif; margin: 20px; background: #fafafa; }
+    h1 { text-align: center; margin-bottom: 20px; }
 
-    /* 버튼 */
-    .toolbar { text-align: center; margin-bottom: 20px; }
-    .toolbar button {
-      margin: 5px; padding: 8px 14px; border: none;
-      background: #1a73e8; color: white; border-radius: 6px; cursor: pointer;
+    .filters { margin-bottom: 20px; }
+    .filter-group { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin: 10px 0; }
+    .filter-group h3 { flex-basis: 100%; text-align: center; font-size: 14px; color: #444; margin-bottom: 5px; }
+
+    .filters button {
+      padding: 6px 12px; border: 1px solid #ccc; border-radius: 20px;
+      background: white; cursor: pointer; font-size: 14px;
     }
-    .toolbar button:hover { background: #1558b0; }
+    .filters button.active { background: #1a73e8; color: white; border-color: #1a73e8; }
 
-    /* 도서 카드 */
-    .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(180px,1fr)); gap: 16px; }
-    .book-card {
-      background: white; border-radius: 12px; padding: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1); cursor: pointer;
-      display: flex; flex-direction: column; align-items: center;
+    .book-list { display: grid; grid-template-columns: repeat(auto-fill,minmax(220px,1fr)); gap: 20px; }
+    .card {
+      background: white; border-radius: 10px; padding: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1); display: flex; flex-direction: column;
       transition: transform 0.2s;
     }
-    .book-card:hover { transform: scale(1.02); }
-    .book-card img {
-      width: 100%; height: 250px; object-fit: contain; border-radius: 8px;
-      background: #f5f5f5;
-    }
-    .book-card h3 { margin: 10px 0 5px; font-size: 16px; text-align: center; }
-    .book-card p { font-size: 13px; color: #555; text-align: center; }
+    .card:hover { transform: scale(1.02); }
+    .card img { width: 100%; height: 180px; object-fit: contain; border-radius: 6px; background: #f0f0f0; }
+    .title { font-weight: bold; margin: 10px 0 6px; font-size: 15px; }
+    .meta { font-size: 13px; color: #666; }
 
-    /* 로딩 */
-    .loading { text-align: center; margin: 40px auto; color: #555; }
-    .spinner {
-      width: 40px; height: 40px;
-      border: 4px solid #e5e7eb;
-      border-top: 4px solid #1a73e8;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      margin: 0 auto 10px;
-    }
-    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-    .hidden { display: none; }
-
-    /* 상단 네비 */
-    .nav { margin-bottom: 20px; text-align: center; }
+    .loading { text-align: center; margin: 20px; display: none; }
+    .nav { text-align: center; margin-top: 20px; }
     .nav a { margin: 0 10px; text-decoration: none; color: #1a73e8; font-weight: bold; }
   </style>
 </head>
 <body>
   <h1>📚 도서 리스트</h1>
 
+  <div id="filters" class="filters"></div>
+  <div id="loading" class="loading">📡 불러오는 중...</div>
+  <div id="bookList" class="book-list"></div>
+
   <div class="nav">
     <a href="index.html">🏠 홈</a>
   </div>
 
-  <!-- 필터 버튼 -->
-  <div class="toolbar" id="filterBar">
-    <button onclick="filterBooks('all')">전체보기</button>
-  </div>
-
-  <!-- 로딩 -->
-  <div id="loading" class="loading">
-    <div class="spinner"></div>
-    <p>로딩 중입니다...</p>
-  </div>
-
-  <!-- 도서 카드 리스트 -->
-  <div id="bookList" class="grid hidden"></div>
-
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbygL5W_rVDTMkPIjLiSjDVN5nxRaZgHTIW3vbJgTgOL_Z_IwLF4k97VEd1bQNfxqAs1_A/exec";
+    const loading = document.getElementById("loading");
+    const bookList = document.getElementById("bookList");
+    const filters = document.getElementById("filters");
 
     let books = [];
+    let activeFilter = "전체보기";
+
+    // ✅ 기본 카테고리와 레벨
+    const DEFAULT_CATEGORIES = ["철학", "역사", "문학", "종교", "예술", "사회과학", "자연과학"];
+    const FIXED_LEVELS = ["입문", "초급", "중급", "고급", "전문"];
 
     async function fetchBooks() {
+      loading.style.display = "block";
       try {
-        const res = await fetch(API_URL + "?action=getBooks");
+        const res = await fetch(API_URL);
         books = await res.json();
-
-        buildFilterButtons(books);
-        renderBooks(books);
-
-      } catch (e) {
-        document.getElementById("loading").innerHTML = "<p>❌ 데이터를 불러오는 중 오류가 발생했습니다.</p>";
+        renderFilters();
+        renderBooks();
+      } catch (err) {
+        alert("❌ 도서 불러오기 실패");
+      } finally {
+        loading.style.display = "none";
       }
     }
 
-    function buildFilterButtons(data) {
-      const categories = new Set();
-      const levels = new Set();
+    function renderFilters() {
+      filters.innerHTML = "";
 
-      data.forEach(b => {
-        (b.category || "").split(",").forEach(c => c.trim() && categories.add(c.trim()));
-        (b.level || "").split(",").forEach(l => l.trim() && levels.add(l.trim()));
+      // 전체보기
+      const allBtn = createFilterButton("전체보기");
+      filters.appendChild(allBtn);
+
+      // 카테고리 그룹
+      const categoryGroup = document.createElement("div");
+      categoryGroup.className = "filter-group";
+      categoryGroup.innerHTML = "<h3>📂 카테고리</h3>";
+
+      const categories = new Set(DEFAULT_CATEGORIES);
+      books.forEach(book => {
+        if (book.category) {
+          const cats = Array.isArray(book.category) ? book.category : book.category.split(",");
+          cats.forEach(c => categories.add(c.trim()));
+        }
       });
+      categories.forEach(cat => categoryGroup.appendChild(createFilterButton(cat)));
+      filters.appendChild(categoryGroup);
 
-      const bar = document.getElementById("filterBar");
+      // 레벨 그룹
+      const levelGroup = document.createElement("div");
+      levelGroup.className = "filter-group";
+      levelGroup.innerHTML = "<h3>📊 난이도</h3>";
 
-      categories.forEach(c => {
-        const btn = document.createElement("button");
-        btn.textContent = "카테고리: " + c;
-        btn.onclick = () => filterBooks(c);
-        bar.appendChild(btn);
-      });
-
-      levels.forEach(l => {
-        const btn = document.createElement("button");
-        btn.textContent = "레벨: " + l;
-        btn.onclick = () => filterBooks(l);
-        bar.appendChild(btn);
-      });
+      FIXED_LEVELS.forEach(lvl => levelGroup.appendChild(createFilterButton(lvl)));
+      filters.appendChild(levelGroup);
     }
 
-    function filterBooks(keyword) {
-      if (keyword === "all") {
-        renderBooks(books);
-      } else {
-        const filtered = books.filter(b =>
-          (b.category && b.category.includes(keyword)) ||
-          (b.level && b.level.includes(keyword))
-        );
-        renderBooks(filtered);
-      }
-    }
-
-    function renderBooks(list) {
-      const container = document.getElementById("bookList");
-      container.innerHTML = "";
-
-      if (list.length === 0) {
-        container.innerHTML = "<p>등록된 도서가 없습니다.</p>";
-      }
-
-      list.forEach(book => {
-        const card = document.createElement("div");
-        card.className = "book-card";
-        card.onclick = () => viewDetail(book.title);
-
-        card.innerHTML = `
-          <img src="${book.cover}" alt="${book.title}">
-          <h3>${book.title}</h3>
-          <p>${book.author || ""} / ${book.publisher || ""}</p>
-        `;
-
-        container.appendChild(card);
+    function createFilterButton(label) {
+      const btn = document.createElement("button");
+      btn.textContent = label;
+      if (label === activeFilter) btn.classList.add("active");
+      btn.addEventListener("click", () => {
+        activeFilter = label;
+        renderFilters();
+        renderBooks();
       });
-
-      document.getElementById("loading").classList.add("hidden");
-      container.classList.remove("hidden");
+      return btn;
     }
 
-    function viewDetail(title) {
-      window.location.href = `book-detail.html?title=${encodeURIComponent(title)}`;
+    function renderBooks() {
+      bookList.innerHTML = "";
+      books
+        .filter(book => {
+          if (activeFilter === "전체보기") return true;
+          const catMatch = book.category && book.category.includes(activeFilter);
+          const lvlMatch = book.level && book.level.includes(activeFilter);
+          return catMatch || lvlMatch;
+        })
+        .forEach(book => {
+          const card = document.createElement("div");
+          card.className = "card";
+          card.innerHTML = `
+            <img src="${book.cover || 'https://via.placeholder.com/150x200?text=No+Cover'}" alt="${book.title}">
+            <div class="title">${book.title}</div>
+            <div class="meta">${book.author || ''} | ${book.publisher || ''}</div>
+          `;
+          card.addEventListener("click", () => {
+            window.location.href = `book-detail.html?title=${encodeURIComponent(book.title)}`;
+          });
+          bookList.appendChild(card);
+        });
     }
 
     fetchBooks();
